# MyGitHubNotification

./: .env.sample  .envrc.sample  .gitignore  Cargo.toml  Dockerfile  README.md  makefile.toml
.aws/: ecs_task_definition.json
.github/workflows/: cd.yml  ci-rust.yml  ci-workflow.yml
github-notification/: Cargo.toml  Dockerfile  makefile.toml
github-notification-server/: Cargo.toml
github-notification-server/src/: lib.rs  logger.rs  main.rs
github-notification-server/src/handlers/: health_check.rs  mod.rs  notification.rs
github-notification/src/: env.rs  errors.rs  lib.rs  main.rs  models.rs  sentry.rs
github-notification/src/slack/: message.rs  mod.rs  notification.rs  payload.rs  slash.rs
src/: env.rs  errors.rs  github.rs  lib.rs  main.rs  models.rs  slack.rs
web-server/: Cargo.toml
web-server/src/: main.rs
